1999-11-15    <rpr@rpr.wapit.com>

	* bearerbox.c, boxc.c: Basic routing for WAP messages. Does not
	work with connectioned sessions, if there are more than one WAP
	BOX. Tough. Fixed later.

	* bb_msg.c, bb_msg.h: initiated better routing systems for
	WAP-messages, but implementation not ready
	
	* smsbox.c: file urltrans-request fixed.

1999-11-15 Mikael Gueck <mikael.gueck@wapit.com>

	* csdr.c: send and receive UDP datagrams.

	* smsc_smpp.c: 8bit receive related fixes.

1999-11-15    <rpr@rpr.wapit.com>

	* smsbox.smsconf, simple.smsconf: renamed previous smsbox.conf as
	.smsconf so that they are distinguished from bearerbox
	configuration

	* smsbox.c: fixing 'file' urltransh-requests. Still some bugs

	* bearerbox.c: WAP-packets are sent onward.. routing still missing

Mon Nov 15 12:04:37 1999  Lars Wirzenius  <liw@wapit.com>

	* wapbox.c, wapbox.conf: Wrote. This is the main module of
	the WAP box.
	
	* wapbox_feeder.c: Trivial test program for wapbox.c.
	
	* Makefile: related changes.
	
	* octstr.c: removed debugging message telling argument was NULL.
	Now a NULL argument is silently ignored.
	
	* msg.c: Added name of message type to message dump.

1999-11-12    <rpr@rpr.wapit.com>

	* bearerbox.c, boxc.c: ready for WAP invasion (ok, still missing
	routing functions and sending is currently set off)

Fri Nov 12 17:30:08 1999  Lars Wirzenius  <liw@wapit.com>

	* Makefile: added "make depend". This only works with GNU make,
	shame on me.

1999-11-12    <rpr@rpr.wapit.com>

	* html.c: modified html_strip_suffix_and_prefix to use
	str_case-str

	* urltrans.c, smsbox.c: fixed aliases

	* wapitlib.c, bearerbox.c: modified select to understand certain
	signals

Fri Nov 12 17:06:52 1999  Lars Wirzenius  <liw@wapit.com>

	* wapitlib.c and .h: Added str_case_str.

1999-11-12    <rpr@rpr.wapit.com>

	* smsc.h, smsc.c, bearerbox.c: added re-connecting functions to
	smsc_get_message, and changed interface a bit
