@@ -43,6 +43,8 @@ Upcoming features:
 
 Missing from current version that were in SMSGateway 0.6:
 
- * SMS or HTTP 'stop' and 'start' adminstration commands
+ * nothing? (ok, the suspend is not working perfectly, as it allows
+    sendsms to work)
+
  
  
