@@ -13,6 +13,26 @@
 # http-port = (port number)
 #	HTTP adminstration port (http://your.host:port/cgi-bin/....)
 #
+# admin-username = (name)
+#	case-insensitive username for adminstration HTTP-requests
+#
+# admin-password = (password)
+#	case-sensitive password for HTTP-adminstration. Note that you must
+#	set both the username and password for adminstration messages to work
+#
+#	currently available HTTP-commands are:
+#
+#		status		print current queue and thread status
+#
+#		stop		suspend the system. Does not receive any new
+#				SMS or WAP messages until re-started. Processes
+#				all pending messages, however
+#
+#		start		re-starts the system after suspend
+#
+#		kill		shutdown the bearerbox. All messages in the queue
+#				are first processed, however.
+#
 # wap-port = (port number)
 #	port for WAP Boxes to connect
 #
@@ -49,6 +69,8 @@
 #
 max-threads = 20
 http-port = 12345
+#admin-username = ""
+#admin-password = "" 
 wap-port = 13000
 sms-port = 13001
 heartbeat-freq = 5
