@@ -3,6 +3,8 @@
 # This is for wap internal testing use. global-prefix is for Finland
 #
 http-port = 12345
+admin-username = "beavis"
+admin-password = "butthead"
 wap-port = 13000
 sms-port = 13001
 heartbeat-freq = 5
