@@ -1,5 +1,12 @@
 1999-11-15    <rpr@rpr.wapit.com>
 
+	* bearerbox.c, bearerbox.conf, fake.conf: added simple
+	HTTP-adminstration and watching routines
+
+	* smsbox.c: updated comments
+	
+1999-11-15    <rpr@rpr.wapit.com>
+
 	* bearerbox.c, boxc.c: Basic routing for WAP messages. Does not
 	work with connectioned sessions, if there are more than one WAP
 	BOX. Tough. Fixed later.
